--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -1,1 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'news/include/base.html' %}
+{% load static %}
+
+{% block container-fluid %}
+
+{% endblock %}
+
