--- a/templates/news/include/footer.html
+++ b/templates/news/include/footer.html
@@ -1,13 +1,13 @@
 {% load static %}
- <footer>
+
         <div class="row">
             <div  class="col-md-12">
                 <nav class="navbar navbar-expand-sm bg-white navbar-white " >
-                <ul class="navbar-nav" >
-                    <li class="nav-item active" >
-                        <a class="nav-link text-white bg-primary " href="#"><strong>Sayt Haqida</strong></a>
+                <ul class="navbar-nav  " >
+                    <li class="nav-item active footer-item"  >
+                        <a class="nav-link text-white bg-primary "  href="#"><strong>Sayt Haqida</strong></a>
                     </li>
-                    <li>
+                    <li >
                         <a class="nav-link text-white bg-primary " href="#"><strong>RSS</strong></a>
                     </li>
                     <li>
@@ -32,4 +32,4 @@
             </div>
         </div>
 
-    </footer>
+
