--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -1,7 +1,11 @@
 {% extends 'news/include/base.html' %}
 {% load static %}
+{% block header %}
 
+            {% include 'news\include\category.html' %}
+
+            {% include 'news\include\region.html' %}
+{% endblock %}
 {% block container-fluid %}
-
 {% endblock %}
 
