--- a/templates/news/include/base.html
+++ b/templates/news/include/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'assets/styles.css' %}">
 </head>
 <body>
+
 <div class="container-fluid">
     <header>
         {% block header %}
@@ -19,10 +20,11 @@
             {% include 'news\include\region.html' %}
         {% endblock %}
     </header>
-    {% block conatiner-fluid %}
-
+    {% block container-fluid %}
     {% endblock %}
-   {% include  'news\include\footer.html' %}
+    <footer>
+        {% include  'news\include\footer.html' %}
+    </footer>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
