--- a/templates/news/include/category.html
+++ b/templates/news/include/category.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="row">
 <div class="col-md-12">
-    <nav class="navbar navbar-expand-sm bg-white navbar-white " >
+    <nav class="navbar navbar-expand-sm bg-white navbar-white bor_der" >
                     <a class="navbar-brand " href="#">
                         <img src="{% static 'assets/img/kun_uz-logo.jpg' %}" alt="Logo" style="width:100px;">
                     </a>
