add url to footer and edit templates add new one

--- a/templates/news/include/footer.html
+++ b/templates/news/include/footer.html
@@ -12,7 +12,7 @@
                     </li>
                     <li>
 
-                        <a class="nav-link text-white bg-primary " href="#"><strong>Aloqa</strong></a>
+                        <a class="nav-link text-white bg-primary " href="{% url 'news:contact' %}"><strong>Aloqa</strong></a>
                     </li>
                     <li>
 
@@ -24,7 +24,7 @@
                     </li>
                     <li>
 
-                        <a class="nav-link text-white bg-primary " href="#"><strong>Kun.uz Jamoasi</strong></a>
+                        <a class="nav-link text-white bg-primary " href="{% url 'news:our-team' %}"><strong>Kun.uz Jamoasi</strong></a>
                     </li>
 
                 </ul>
