--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -1,10 +1,75 @@
 {% extends 'news/include/base.html' %}
 {% load static %}
+<header>
 {% block header %}
             {% include 'news\include\category.html' %}
 
             {% include 'news\include\region.html' %}
 {% endblock %}
+
+</header>
 {% block container-fluid %}
+
+
+         <div class="row" style="border:1px solid red">
+            {% for post in posts %}
+            {% if forloop.counter == 1 %}
+                <div class="col-md-5">
+                        <div >
+                            <img src="{{ post.image.url }}" class="img-thumbnail" alt="">
+                        </div>
+                </div><!-- big image  -->
+                <div class="col-md-5">
+                        <div class="big-text">
+                            <p>{{post.published_at|date:"h:i/j.m.Y"}}</p>
+                            <h3><a href="{% url 'news:detail-page' slug=post.slug  %}">{{post.title}}</a></h3>
+                            <p><b>{{post.anons}}</b></p>
+                            <p>{{post.text|truncatewords:60}}</p>
+
+                        </div>
+                </div><!-- big post -->
+             {% else %}
+                <div class="col-md-4">
+                                <img src="{{ post.image.url }}" class="img-thumbnail" alt="">
+                            </div>
+                <div class="col-md-8">
+
+                                <p>{{post.published_at|date:"h:i/j.m.Y"}}</p>
+                                <h3><a href="{% url 'news:detail-page' slug=post.slug  %}">{{post.anons|truncatewords:7}}</a></h3>
+                                <p>
+                                    {{post.text}}
+                                </p>
+                            </div>
+
+            {% endif %}
+            {% empty %}
+            <h2>Hozircha postlar yoq</h2>
+            {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="pegination">
+        <!--
+        <ul>
+            <li><i class="fa fa-angle-left" aria-hidden="true"></i></li>
+            <li class="active">1</li>
+            <li>2</li>
+            <li>3</li>
+            <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
+        </ul>
+-->
+
+        <div class="nav-links">
+            <span class="page-numbers current">1</span>
+            <a class="page-numbers" href="#">2</a>
+            <a class="page-numbers" href="#">3</a>
+            <a class="page-numbers" href="#">4</a>
+            <a class="page-numbers" href="#">5</a>
+            <a class="page-numbers" href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+        </div>
+</div>
 {% endblock %}
+<footer>
+        {% include  'news\include\footer.html' %}
+</footer>
 
