--- a/templates/news/include/base.html
+++ b/templates/news/include/base.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title> {% block title %} O‘zbekiston va jahon yangiliklari, eng so‘nggi tezkor xabarlar, qiziqarli maqola,
         intervyu, foto va video materiallar - KUN.UZ {% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'assets/styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'assets\styles.css' %}">
 </head>
 <body>
 
@@ -15,15 +15,15 @@
     <header>
         {% block header %}
 
-            {% include 'news\include\category.html' %}
+        {% include 'news\include\category.html' %}
 
-            {% include 'news\include\region.html' %}
+        {% include 'news\include\region.html' %}
         {% endblock %}
     </header>
     {% block container-fluid %}
     {% endblock %}
     <footer>
-        {% include  'news\include\footer.html' %}
+        {% include 'news\include\footer.html' %}
     </footer>
 </div>
 
