--- a/templates/news/include/footer.html
+++ b/templates/news/include/footer.html
@@ -1,35 +1,52 @@
 {% load static %}
 
-        <div class="row">
-            <div  class="col-md-12">
-                <nav class="navbar navbar-expand-sm bg-white navbar-white " >
-                <ul class="navbar-nav  " >
-                    <li class="nav-item active footer-item"  >
-                        <a class="nav-link text-white bg-primary "  href="#"><strong>Sayt Haqida</strong></a>
-                    </li>
-                    <li >
-                        <a class="nav-link text-white bg-primary " href="#"><strong>RSS</strong></a>
-                    </li>
-                    <li>
+<div class="row footer_top" style="background-color: #413fce">
+    <div class="col-md-12 ">
+        <nav class="navbar navbar-expand-sm  navbar-white ">
+            <ul class="navbar-nav">
+                <li class="nav-item mx-4">
+                    <a class="nav-link text-white  " href="#"><strong>Sayt Haqida</strong></a>
+                </li>
+                <li class="nav-item mx-4">
+                    <a class="nav-link text-white " href="#"><strong>RSS</strong></a>
+                </li>
+                <li class="nav-item mx-4">
+                    <a class="nav-link text-white  "
+                       href="{% url 'news:contact' %}"><strong>Aloqa</strong></a>
+                </li>
+                <li class="nav-item mx-4">
+                    <a class="nav-link text-white  " href="#"><strong>Reklama</strong></a>
+                </li>
+                <li class="nav-item mx-4">
 
-                        <a class="nav-link text-white bg-primary " href="{% url 'news:contact' %}"><strong>Aloqa</strong></a>
-                    </li>
-                    <li>
+                    <a class="nav-link text-white  " href="#"><strong>Kun Mavzulari</strong></a>
+                </li>
+                <li class="nav-item mx-4">
 
-                        <a class="nav-link text-white bg-primary " href="#"><strong>Reklama</strong></a>
-                    </li>
-                    <li>
+                    <a class="nav-link text-white" href="{% url 'news:our-team' %}"><strong>Kun.uz
+                        Jamoasi</strong></a>
+                </li>
 
-                        <a class="nav-link text-white bg-primary " href="#"><strong>Kun Mavzulari</strong></a>
-                    </li>
-                    <li>
+            </ul>
+        </nav>
+    </div>
+</div>
+<div class="row footer_bottom text-white p-2" style="background-color: #1b1990;">
+    <div class="col-md-10">
+        <p>«KUN.UZ» сайтида эълон қилинган материаллардан нусха кўчириш, тарқатиш ва бошқа шаклларда фойдаланиш фақат
+            таҳририят ёзма розилиги билан амалга оширилиши мумкин.
+            Гувоҳнома: №0987. Берилган санаси: 22.06.2015 йил. Муассис: «WEB EXPERT» МЧЖ. Таҳририят манзили: 100043,
+            Тошкент шаҳри, К. Ёрматов кўчаси, 12-уй. Электрон манзил: info@kun.uz.
+            Сайтда эълон қилинаётган муаллифлик мақолаларида келтирилган фикрлар муаллифга тегишли ва улар Kun.uz
+            таҳририяти нуқтаи назарини ифода этмаслиги мумкин.
+            Ⓣ - мақола ва материалларда қўйилган мазкур белги уларнинг тижорат ва реклама ҳуқуқлари асосида эълон
+            қилинганлигини билдиради.
+    </div>
+    <div class="col-md-2">
+        <p>Bu yerda iconlar boladi</p>
+    </div>
+</div>
 
-                        <a class="nav-link text-white bg-primary " href="{% url 'news:our-team' %}"><strong>Kun.uz Jamoasi</strong></a>
-                    </li>
 
-                </ul>
-                </nav>
-            </div>
-        </div>
 
 
